proper startup and exit escape codes

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "homepage": "https://github.com/arjunmehta/node-column-stream",
   "dependencies": {
-    "wcwidth.js": "^1.0.0"
+    "keypress": "~0.2.1",
+    "wcwidth.js": "~1.0.0"
   }
 }
