--- a/package.json
+++ b/package.json
@@ -1,37 +1,39 @@
 {
-    "name": "columns",
-    "version": "0.3.1",
-    "description": "Stream your text streams into streams of column streams.",
-    "main": "main.js",
-    "scripts": {
-        "test": "nodeunit test/test.js"
-    },
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/arjunmehta/node-columns.git"
-    },
-    "devDependencies": {
-        "nodeunit": "~0.8.8",
-        "benchmark": "~1.0.0",
-        "keypress": "~0.2.1"
-    },
-    "keywords": [
-        "streams",
-        "columns",
-        "column",
-        "view",
-        "terminal",
-        "pipe",
-        "stream"
-    ],
-    "author": "Arjun Mehta",
-    "license": "MIT",
-    "bugs": {
-        "url": "https://github.com/arjunmehta/node-columns/issues"
-    },
-    "homepage": "https://github.com/arjunmehta/node-columns",
-    "dependencies": {
-        "ansi-regex": "~1.1.0",
-        "wcwidth.js": "~1.0.0"
-    }
+  "name": "columns",
+  "version": "0.3.1",
+  "description": "Stream your text streams into streams of column streams.",
+  "main": "main.js",
+  "scripts": {
+    "test": "nodeunit test/test.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/arjunmehta/node-columns.git"
+  },
+  "devDependencies": {
+    "nodeunit": "~0.8.8",
+    "benchmark": "~1.0.0",
+    "keypress": "~0.2.1"
+  },
+  "keywords": [
+    "streams",
+    "columns",
+    "column",
+    "view",
+    "terminal",
+    "pipe",
+    "stream"
+  ],
+  "author": "Arjun Mehta",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/arjunmehta/node-columns/issues"
+  },
+  "homepage": "https://github.com/arjunmehta/node-columns",
+  "dependencies": {
+    "ansi-regex": "~1.1.0",
+    "strip-ansi": "~2.0.1",
+    "wcwidth": "^1.0.0",
+    "wcwidth.js": "~1.0.0"
+  }
 }
