--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
     "url": "https://github.com/arjunmehta/node-columns.git"
   },
   "devDependencies": {
-    "nodeunit": "~0.8.8",
     "benchmark": "~1.0.0",
-    "keypress": "~0.2.1"
+    "brake": "^1.0.1",
+    "keypress": "~0.2.1",
+    "nodeunit": "~0.8.8",
+    "request": "~2.51.0",
+    "slow-stream": "0.0.4",
+    "split": "^0.3.2"
   },
   "keywords": [
     "streams",
