--- a/package.json
+++ b/package.json
@@ -1,39 +1,39 @@
 {
-  "name": "columns",
-  "version": "0.6.0",
-  "description": "Stream your text streams into streams of column streams.",
-  "main": "main.js",
-  "scripts": {
-    "test": "nodeunit test/test.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/arjunmehta/node-columns.git"
-  },
-  "devDependencies": {
-    "brake": "~1.0.1",
-    "keypress": "~0.2.1",
-    "nodeunit": "~0.8.8",
-    "request": "~2.51.0",
-    "split": "^0.3.2"
-  },
-  "keywords": [
-    "streams",
-    "columns",
-    "column",
-    "view",
-    "terminal",
-    "pipe",
-    "stream"
-  ],
-  "author": "Arjun Mehta",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/arjunmehta/node-columns/issues"
-  },
-  "homepage": "https://github.com/arjunmehta/node-columns",
-  "dependencies": {
-    "strip-bom": "^1.0.0",
-    "wcwidth.js": "~1.0.0"
-  }
+    "name": "columns",
+    "version": "0.6.0",
+    "description": "Stream your text streams into streams of column streams.",
+    "main": "main.js",
+    "scripts": {
+        "test": "nodeunit test/test.js"
+    },
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/arjunmehta/node-columns.git"
+    },
+    "devDependencies": {
+        "brake": "~1.0.1",
+        "keypress": "~0.2.1",
+        "nodeunit": "~0.8.8",
+        "request": "~2.51.0"        
+    },
+    "keywords": [
+        "streams",
+        "columns",
+        "column",
+        "view",
+        "terminal",
+        "pipe",
+        "stream"
+    ],
+    "author": "Arjun Mehta",
+    "license": "MIT",
+    "bugs": {
+        "url": "https://github.com/arjunmehta/node-columns/issues"
+    },
+    "homepage": "https://github.com/arjunmehta/node-columns",
+    "dependencies": {
+        "strip-bom": "^1.0.0",
+        "wcwidth.js": "~1.0.0",
+        "split": "~0.3.2"
+    }
 }
