Removing caret style for dependency.

--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     },
     "homepage": "https://github.com/arjunmehta/node-columns",
     "dependencies": {
-        "strip-bom": "^1.0.0",
+        "strip-bom": "~1.0.0",
         "wcwidth.js": "~1.0.0",
         "split": "~0.3.2"
     }
