--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
         "brake": "~1.0.1",
         "keypress": "~0.2.1",
         "nodeunit": "~0.8.8",
-        "request": "~2.51.0"        
+        "request": "~2.51.0"
     },
     "keywords": [
         "streams",
@@ -32,8 +32,9 @@
     },
     "homepage": "https://github.com/arjunmehta/node-columns",
     "dependencies": {
+        "heartbeats": "~3.0.0",
+        "split": "~0.3.2",
         "strip-bom": "~1.0.0",
-        "wcwidth.js": "~1.0.0",
-        "split": "~0.3.2"
+        "wcwidth.js": "~1.0.0"
     }
 }
